<resources>
    <string name="app_name">Погода</string>

    <string name="open_weather_map_api_key_1">61a25b412bb7c531e7fc8d4ca71457e5</string>
    <string name="open_weather_map_api_key_2">f50a9e7252d8adebd48a802bde82159c</string>
    <string name="open_weather_map_api_key_3">6ec6d5e8c18ae35c85a727373bcecb71</string>

    <string name="google_maps_key"
        templateMergeStrategy="preserve"
        translatable="false">AIzaSyAMnd54M-yelODB1-a8JIALzd23V-yU8BY</string>

    <string name="temperature">\u00B0</string>
    <string name="protocol_tls">TLS</string>

    <string name="insert_new_city">Введите название города</string>
    <string name="weather_current_location">Погода в текущем населенном пункте</string>
    <string name="alert_for_tomorrow">Предупреждение на завтра</string>
    <string name="alert_about_bad_weather">Оповещение о плохой погоде</string>

    <!-- Toast messages -->
    <string name="no_internet_access">Нет доступа в Интернет</string>
    <string name="lost_internet_access">Потерян доступа в Интернет</string>
    <string name="request_limit_exceeded">"Превышен лимит по запросам"</string>>
    <string name="refresh_your_weather_data">"Обновите данные о погоде"</string>

    <string name="city_not_found">Такого города не существует</string>
    <string name="city_exist">Такой город уже есть</string>
    <string name="city_weather_data_updated">Данные обновленны</string>
    <string name="city_weather_update_failed">При обновлении произошла ошибка</string>
    <string name="city_added">Город добавлен</string>

    <string name="gps_disabled">Gps выключен, вывод корректных геоданных невозможен</string>>
    <string name="location_definition">Определить местоположение</string>
    <string name="loading_information">Информация скоро загрузится</string>
    <string name="location_information_updated">Данные о текущее местоположение обновлены</string>
    <string name="location_information_failure">Ошибка при получении информации о местоположении</string>>
    <string name="permission_denied">"Погода по геоданным недоступна, отсутствует разрешение на определение местонахождения"</string>

    <string name="precipitation_tile_failure">"Не удалось получить карту осадков"</string>

    <!-- days of the week -->
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>

    <!-- line precipitation -->
    <string name="mm">мм</string>
    <string name="one_and_a_half">1.5</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="seven">7</string>
    <string name="ten">10</string>
    <string name="twenty">20</string>
    <string name="thirty">30</string>

</resources>