<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.PrecipitationMapFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">
    </androidx.fragment.app.FragmentContainerView>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="30dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/background_line_precipitation"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/map">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather"
                android:paddingStart="3dp"
                android:paddingEnd="20dp"
                android:text="@string/mm"
                android:textColor="?attr/text_primary_color"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather"
                android:paddingStart="0dp"
                android:paddingEnd="23dp"
                android:text="@string/one_and_a_half"
                android:textColor="?attr/text_primary_color"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather"
                android:paddingStart="0dp"
                android:paddingEnd="23dp"
                android:text="@string/two"
                android:textColor="?attr/text_primary_color"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather"
                android:paddingStart="0dp"
                android:paddingEnd="23dp"
                android:text="@string/three"
                android:textColor="?attr/text_primary_color"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather"
                android:paddingStart="0dp"
                android:paddingEnd="23dp"
                android:text="@string/seven"
                android:textColor="?attr/text_primary_color"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather"
                android:paddingStart="0dp"
                android:paddingEnd="23dp"
                android:text="@string/ten"
                android:textColor="?attr/text_primary_color"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather"
                android:paddingStart="0dp"
                android:paddingEnd="23dp"
                android:text="@string/twenty"
                android:textColor="?attr/text_primary_color"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather"
                android:text="@string/thirty"
                android:textColor="?attr/text_primary_color"
                android:textSize="13sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/gradient_line_precipitation" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>